--- a/Thesis.html
+++ b/Thesis.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Faith Evangelista-Parsons" />
+<meta name="author" content="Analyst: Faith Evangelista-Parsons" />
 
 
 <title>Statistical Analysis for Gladys Faith Quidasol</title>
@@ -363,8 +363,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Statistical Analysis for Gladys Faith Quidasol</h1>
-<h4 class="author">Faith Evangelista-Parsons</h4>
-<h4 class="date">3/31/2020</h4>
+<h4 class="author">Analyst: Faith Evangelista-Parsons</h4>
 
 </div>
 
@@ -502,6 +501,10 @@ summary {
 <p><em>Interpretation</em>: There is no significant difference in the change in total scores between the gadget-based and longhand technique groups.</p>
 </div>
 </div>
+</div>
+<div id="reference-files" class="section level2">
+<h2>Reference files</h2>
+<p>All data files and codes can be found and downloaded from this <a href="https://github.com/FaithParsons/Stat_Consult_Thesis_Didith">GitHub repository</a>.</p>
 </div>
 
 
