update incorrect output

--- a/Thesis.html
+++ b/Thesis.html
@@ -368,6 +368,8 @@ summary {
 </div>
 
 
+<div id="statistical-tests" class="section level1">
+<h1>Statistical tests</h1>
 <div id="test-of-normality" class="section level2">
 <h2>Test of Normality</h2>
 <p>The Shapiro Wilk’s test was used to assess whether the differences between pre-test and post-test scores follow the normal distribution for grammar, vocabulary, and total scores in the longhand, and the gadget-based group. A p-value &gt; 0.05 indicates that the difference was normally distributed.</p>
@@ -460,20 +462,20 @@ summary {
 </div>
 <div id="vocabulary-3" class="section level4">
 <h4><u>Vocabulary</u></h4>
-<p>Mean diff (Post - Pre): -0.2666667</p>
-<p>Std. Dev.: 2.1865389</p>
-<p>T-statistic: -0.4723426</p>
+<p>Mean diff (Post - Pre): -1.2666667</p>
+<p>Std. Dev.: 2.8149262</p>
+<p>T-statistic: -1.7427735</p>
 <p>DF: 14</p>
-<p>p-value: 0.6439606</p>
+<p>p-value: 0.1032848</p>
 <p><em>Interpretation</em>: There is no significant difference in vocabulary scores before and after using the longhand review technique.</p>
 </div>
 <div id="total-1" class="section level4">
 <h4><u>Total</u></h4>
 <p>Mean diff (Post - Pre): -0.5333333</p>
-<p>Std. Dev.: 3.7581657</p>
-<p>T-statistic: -0.5496275</p>
+<p>Std. Dev.: 4.3072475</p>
+<p>T-statistic: -0.4795617</p>
 <p>DF: 14</p>
-<p>p-value: 0.5912354</p>
+<p>p-value: 0.6389443</p>
 <p><em>Interpretation</em>: There is no significant difference in total scores before and after using the longhand review technique.</p>
 </div>
 </div>
@@ -505,6 +507,7 @@ summary {
 <div id="reference-files" class="section level2">
 <h2>Reference files</h2>
 <p>All data files and codes can be found and downloaded from this <a href="https://github.com/FaithParsons/Stat_Consult_Thesis_Didith">GitHub repository</a>.</p>
+</div>
 </div>
 
 
